--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>2025 Cute Calendar + To‑Do</title>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>Nook and Nanny Calendar</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  <!-- Seasonal Background -->
   <video id="bgVideo" autoplay muted loop playsinline>
-    <source src="winter.mp4" type="video/mp4" />
-    Your browser does not support the video tag.
+    <source src="winter.mp4" type="video/mp4"/>
   </video>
 
+  <!-- Calendar Container -->
   <div class="container">
-    <!-- Calendar Panel -->
     <section class="calendar">
       <div class="nav">
         <button id="prev">❮</button>
@@ -29,19 +29,47 @@
       <div class="grid days" id="calendarDays"></div>
       <p id="taskMessage"></p>
       <div class="task-input-box">
-        <input type="text" id="taskInput" placeholder="Add a task and pick a date" />
+        <input type="text" id="taskInput" placeholder="Add a task"/>
         <button id="addTask">Add Task</button>
-        <button id="deleteTask" style="display: none; background: #e74c3c; color: white; border-radius: 4px; padding: 8px 12px; border: none; cursor: pointer;">Delete Task</button>
+        <button id="deleteTask">Delete Task</button>
+      </div>
+      <div class="summary-button-box">
+        <button id="showSummary">📊 View Monthly Summary</button>
       </div>
     </section>
-
-    <!-- Hidden To‑Do Panel (kept for structure) -->
-    <aside class="todo" style="display: none;">
-      <h2>To‑Do List</h2>
-      <ul class="tasks" id="taskList"></ul>
-    </aside>
   </div>
 
+  <!-- Full-Screen Daily-Log Form -->
+  <div id="dailyLog" class="overlay">
+    <div class="form">
+      <button id="backBtn">🔙 Back</button>
+      <h2 id="logDate">Log for …</h2>
+      <label>
+        Kids nanny took care of
+        <input type="number" id="logKids"/>
+      </label>
+      <label>Drinks Sold<div id="drinksMenu"></div></label>
+      <label>Food Sold<div id="foodMenu"></div></label>
+      <label>
+        Expenses (ingredients etc)
+        <input type="number" id="logExpenses"/>
+      </label>
+      <button id="saveLog">Save</button>
+      <button id="editLog" style="display:none;">✏️ Edit</button>
+      <p id="logSummary"></p>
+    </div>
+  </div>
+<!-- Full-Screen Monthly Summary -->
+<div id="monthlySummary" class="overlay">
+  <div class="form">
+    <div class="summary-header">
+      <button id="closeSummary">❌ Close</button>
+      <button id="backFromSummary">🔙 Back</button>
+    </div>
+    <h2>📅 Monthly Summary</h2>
+    <div id="summaryContent"></div>
+  </div>
+</div>
   <script src="script.js"></script>
 </body>
 </html>
