--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Password:
         <input type="password" id="passwordInput"/>
       </label>
-      <button id="loginBtn">Login</button>
+      <button id="loginBtn" onclick="login()">Login</button>
       <p id="loginMessage"></p>
     </div>
   </div>
